Rename abimees_settings - Copy.ini to abimees_settings.ini

--- a/abimees_settings.ini
+++ b/abimees_settings.ini
@@ -2,12 +2,12 @@
 defaultOsakond=Hematoloogiaosakond
 HaigusluguReady=0
 
-; Siia võib lisada kiirlinke, mis ilmnevad Haigusloo alamooduli "Kiirlingid" nupu alla.
-; Linkide sissekanded on üksteisest eraldatud | tähemärgiga
-; Tühjaks jäetud link (ehk siis ||) sisestab eraldusriba
-; Esimesena sisesta lingi kirjeldus (näiteks UpToDate)
-; Seejärel lisa semikoolon (;) ning sinna taha link ise (nt www.uptodate.com)
-; Soovi korral saab sätestada ka veebilehitseja, nt "chrome" (peab olema jutumärkides)
+; Siia vÃµib lisada kiirlinke, mis ilmnevad Haigusloo alamooduli "Kiirlingid" nupu alla.
+; Linkide sissekanded on Ã¼ksteisest eraldatud | tÃ¤hemÃ¤rgiga
+; TÃ¼hjaks jÃ¤etud link (ehk siis ||) sisestab eraldusriba
+; Esimesena sisesta lingi kirjeldus (nÃ¤iteks UpToDate)
+; SeejÃ¤rel lisa semikoolon (;) ning sinna taha link ise (nt www.uptodate.com)
+; Soovi korral saab sÃ¤testada ka veebilehitseja, nt "chrome" (peab olema jutumÃ¤rkides)
 
 [Kiirlingid]
 kiirlingid=UpToDate;https://www.uptodate.com/contents/search|RHK-10;https://www.med24.ee/andmebaasid/rhk10|Ravimiregister;https://www.ravimiregister.ee/default.aspx?pv=HumRavimid.Otsing|Surmateatis;"chrome" https://misp2.digilugu.ee/misp2||Valvegraafik;http://intranet.regionaalhaigla.ee/?op=body&id=1504
@@ -20,7 +20,7 @@ LastViewed=1
 Tellimused=1
 
 ; Viimati vaadatud patsientide alamooduli andmed.
-; Maksimaalse kuvatava patsientide arvu tõstmiseks muuda maxPatients väärtust
+; Maksimaalse kuvatava patsientide arvu tÃµstmiseks muuda maxPatients vÃ¤Ã¤rtust
 
 [ViewedPatients]
 maxPatients=15
