--- a/abimees_settings.ini
+++ b/abimees_settings.ini
@@ -1,5 +1,5 @@
 [General]
-defaultOsakond=Hematoloogiaosakond
+defaultOsakond=
 HaigusluguReady=0
 
 ; Siia võib lisada kiirlinke, mis ilmnevad Haigusloo alamooduli "Kiirlingid" nupu alla.
