--- a/Lib/abimees.template.ini
+++ b/Lib/abimees.template.ini
@@ -5,13 +5,14 @@ HaigusluguReady=0
 [Autostart]
 EsterStatsionaar=1
 EsterRegistratuur=0
+Abimees=0
 
-; Siia vÃµib lisada kiirlinke, mis ilmnevad Haigusloo alamooduli "Kiirlingid" nupu alla.
-; Linkide sissekanded on Ã¼ksteisest eraldatud | tÃ¤hemÃ¤rgiga
-; TÃ¼hjaks jÃ¤etud link (ehk siis ||) sisestab eraldusriba
-; Esimesena sisesta lingi kirjeldus (nÃ¤iteks UpToDate)
-; SeejÃ¤rel lisa semikoolon (;) ning sinna taha link ise (nt www.uptodate.com)
-; Soovi korral saab sÃ¤testada ka veebilehitseja, nt "chrome" (peab olema jutumÃ¤rkides)
+; Siia võib lisada kiirlinke, mis ilmnevad Haigusloo alamooduli "Kiirlingid" nupu alla.
+; Linkide sissekanded on üksteisest eraldatud | tähemärgiga
+; Tühjaks jäetud link (ehk siis ||) sisestab eraldusriba
+; Esimesena sisesta lingi kirjeldus (näiteks UpToDate)
+; Seejärel lisa semikoolon (;) ning sinna taha link ise (nt www.uptodate.com)
+; Soovi korral saab sätestada ka veebilehitseja, nt "chrome" (peab olema jutumärkides)
 
 [Kiirlingid]
 kiirlingid=UpToDate;https://www.uptodate.com/contents/search|RHK-10;https://www.med24.ee/andmebaasid/rhk10|Ravimiregister;https://www.ravimiregister.ee/default.aspx?pv=HumRavimid.Otsing|Surmateatis;"chrome" https://misp2.digilugu.ee/misp2||Valvegraafik;http://intranet.regionaalhaigla.ee/?op=body&id=1504
@@ -27,7 +28,7 @@ Kiirklahvid=1
 Autosuggest=1
 
 ; Viimati vaadatud patsientide alamooduli andmed.
-; Maksimaalse kuvatava patsientide arvu tÃµstmiseks muuda maxPatients vÃ¤Ã¤rtust
+; Maksimaalse kuvatava patsientide arvu tõstmiseks muuda maxPatients väärtust
 
 [ViewedPatients]
 maxPatients=15
